# stotris

./: Cargo.toml  justfile
.cargo/: config.toml
assets/: stotris.ldtk  tileset.aseprite
src/: block.rs  main.rs
